--- a/views/incomeReports.html
+++ b/views/incomeReports.html
@@ -69,18 +69,15 @@
                                                             <tr>
                                                                 <th>#</th>
                                                                 <!-- <th>Image</th> -->
-                                                                <th>Amount</th>
-                                                                <th>Reference</th>
-                                                                <th>Name</th>
-                                                                <th>Email</th>
-                                                                <th>Phone</th>
-                                                                <th>Date</th>
-                                                                <th>Time</th>
-                                                               
-                                                              
-                                                               
-                                                            </tr>
-                                                            <tbody id="CashOutRequestDom">
+                                                                <th>Owner</th>
+                                                                <th>Debit</th>
+                                                                <th>Remark</th>
+                                                                <th>Sender Username</th>
+                                                                <th>Transaction Id</th>
+                                                                <th>Date</th>                              
+                                                                                                                        
+                                                                                                                        </tr>
+                                                            <tbody id="incomeReportDom">
                                                                 <tr> 
                                                                    <td style="text-align: center; position: absolute; left: 35%;"> 
                                                                         Fetching Income Request Please wait ...
