--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -194,9 +194,27 @@
         {{#if userAccount}}
         <script src="js/helpers/api/userAccount.js"></script>
         {{/if}}
-
-     
+        {{#if mailContent}}
+        <script src="js/helpers/api/mailContent.js"></script>
+        {{/if}}
+        {{#if termsAndPrivacy}}
+        <script src="js/helpers/api/termsAndPrivacy.js"></script>
+        {{/if}}
+        {{#if defaultImages}}
+        <script src="js/helpers/api/defaultImages.js"></script>
+        {{/if}}
+        {{#if websiteSettings}}
+        <script src="js/helpers/api/websiteSettings.js"></script>
+        <script src="js/helpers/api/uploadLogo.js"></script>
+        {{/if}}
         
+        {{#if planSettings}}
+        <script src="js/helpers/api/planSettings.js"></script>
+        {{/if}}
+
+        {{#if incomeReports}}
+        <script src="js/helpers/api/incomeReports.js"></script>
+        {{/if}}
     </body>
     
     </html>
