--- a/views/mailContent.html
+++ b/views/mailContent.html
@@ -60,12 +60,12 @@
                                                             <div class="form-group">
                                                                
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea id="welcome-mail" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="welcomeMailBtn" type="button" class="btn btn-success btn-block ">Send</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -88,12 +88,12 @@
                                                             <div class="form-group">
                                                                
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea id="incentive-mail" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="incentiveMailBtn" type="button" class="btn btn-success btn-block ">Send</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -116,12 +116,12 @@
                                                             <div class="form-group">
                                                                
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea id="cashOutRequest-mail" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="cashOutRequestMailBtn" type="button" class="btn btn-success btn-block ">Send</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -146,12 +146,12 @@
                                                             <div class="form-group">
                                                                
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea id="cashoutDisburstment-mail" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="cashoutDisburstmentMailBtn" type="button" class="btn btn-success btn-block ">Send</button>
                                                             </div>
                                                         </form>
                                                     </div>
