--- a/views/userAccount.html
+++ b/views/userAccount.html
@@ -109,12 +109,12 @@
 
                                                             <div class="form-group">
                                                                 <label for="email">User ID</label>
-                                                                <input id="userId@2" name="cvc" type="text" class="form-control" placeholder="">
+                                                                <input id="userId_two" name="cvc" type="text" class="form-control" placeholder="">
                                                             </div>
 
                                                             <div class="form-group">
                                                                 <label for="email">New Username</label>
-                                                                <input id="username@2" name="cvc" type="text" class="form-control" placeholder="">
+                                                                <input id="username_two" name="cvc" type="text" class="form-control" placeholder="">
                                                             </div>
                                                           
                                                             <div class="text-center credit-card-custom office-pad-bottom">
@@ -137,15 +137,20 @@
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
                                                         <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
-                                                      
+
+                                                            <div class="form-group">
+                                                                <label for="email">User ID</label>
+                                                                <input id="userId_three" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+
                                                             <div class="form-group">
                                                                 <label for="email">New Email</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
+                                                                <input id="newEmail" name="cvc" type="email" class="form-control" placeholder="">
                                                             </div>
                                                     
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="changeEmailBtn" type="button" class="btn btn-success btn-block ">Change Email</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -166,19 +171,19 @@
                                                     <div class="demo-container">
                                                         <div class="card-wrapper"></div>
                                                         <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
-                                                      
+                                                            <div class="form-group">
+                                                                <label for="email">User ID</label>
+                                                                <input id="userId_four" name="cvc" type="text" class="form-control" placeholder="">
+                                                            </div>
+
                                                             <div class="form-group">
                                                                 <label for="email">New Transaction Password</label>
-                                                                <input name="cvc" type="text" class="form-control" placeholder="">
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label for="email">Re-Enter Transaction Password</label>
-                                                                <input name="name" type="text" class="form-control" placeholder="">
+                                                                <input id="passwordNew" name="cvc" type="text" class="form-control" placeholder="">
                                                             </div>
                                                          
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="passNewBtn" type="button" class="btn btn-success btn-block ">Change Password</button>
                                                             </div>
                                                         </form>
                                                     </div>
