--- a/views/termsAndPrivacy.html
+++ b/views/termsAndPrivacy.html
@@ -37,12 +37,12 @@
                                                             <div class="form-group">
                                                                
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea id="termsText" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="termsBtn" type="button" class="btn btn-success btn-block ">Send</button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -65,12 +65,12 @@
                                                             <div class="form-group">
                                                                
                                                               
-                                                                    <textarea class="form-control" type='text'
+                                                                    <textarea id="privacyText" class="form-control" type='text'
                                                                     ></textarea>
                                                             </div>
                                                             <div class="text-center credit-card-custom office-pad-bottom">
                                                                 <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
-                                                                <button type="button" class="btn btn-success btn-block ">Edit</button>
+                                                                <button id="privacyBtn" type="button" class="btn btn-success btn-block ">Send</button>
                                                             </div>
                                                         </form>
                                                     </div>
